--- a/main.css
+++ b/main.css
@@ -1,52 +1,50 @@
+body {
+	background-color: #FCFAF6;
+	font-family: 'Raleway', sans-serif;
+}
+
 #logo {
-	position: absolute;
 	left: 0;
 	right: 0;
 	margin: auto;
-	top: 10px;
+	padding-top: 20px;
 	width: 150px;
 }
 
 #title {
-	position: absolute;
 	left: 0;
 	right: 0;
 	margin: auto;
-	top: 170px;
 	width: 200px;
 
-	font-family: 'Raleway', sans-serif;
-	font-size: 24px;
+	font-weight: 300;
+	padding-top: 6px;
+	font-size: 32px;
 	text-align: center;
 }
 
 #print {
-	position: absolute;
-	left: 0;
-	right: 0;
 	margin: auto;
-	top: 210px;
+	padding-top: 30px;
 	width: 560px;
 }
 
 #footer {
-	position: absolute;
+	position: fixed;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	height: 40px;
+	height: 32px;
 	margin: auto;
-	border-top: 1px solid #484848;
+	/*border-top: 1px solid #484848;*/
 
-	font-family: 'Raleway', sans-serif;
-	font-size: 16px;
+	font-size: 14px;
 	color: #484848;
 	text-align: center;
 }
 
 #footer p {
 	height: 20px;
-	position: absolute;
 	left: 0;
 	right: 0;
 	top: 0;
@@ -57,4 +55,10 @@
 #footer img {
 	padding-bottom: 1px;
 	vertical-align: middle;
+}
+
+@media(max-width:570px){
+	#print, #print img {
+		width: 100%;
+	}
 }
