--- a/main.css
+++ b/main.css
@@ -3,6 +3,10 @@ body {
 	font-family: 'Raleway', sans-serif;
 }
 
+a {
+	text-decoration: none;
+}
+
 #logo {
 	left: 0;
 	right: 0;
@@ -20,7 +24,7 @@ body {
 	right: 0;
 	margin: auto;
 	width: 200px;
-
+	color: #000;
 	font-weight: 300;
 	padding-top: 6px;
 	font-size: 32px;
